# fastapi-ocr

./: .gitignore  README.md  convert_cli.py  logging_config.py  ocr_api.py  ocr_service.py  pyproject.toml  server.py
tests/: conftest.py  test_api.py
